--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -24,7 +24,7 @@ import DarkModeToggle from "./DarkModeToggle.astro";
   >
     <a
       class="unset text-xl ml-4 hover:text-text-link"
-      href="https://github.com/flexdinesh/blogster"
+      href="https://github.com/DM1-1"
     >
       <i
         class="fa-brands fa-github"
@@ -32,7 +32,7 @@ import DarkModeToggle from "./DarkModeToggle.astro";
         title="Blogster on GitHub"></i>
       <span class="fa-sr-only">Blogster on GitHub</span>
     </a>
-    <a
+    <!-- <a
       class="unset text-xl ml-4 hover:text-text-link"
       href="https://twitter.com/flexdinesh"
     >
@@ -41,7 +41,7 @@ import DarkModeToggle from "./DarkModeToggle.astro";
         aria-hidden="true"
         title="Dinesh on Twitter"></i>
       <span class="fa-sr-only">Dinesh on Twitter</span>
-    </a>
+    </a> -->
   </div>
   <DarkModeToggle />
 </header>
