--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -4,19 +4,19 @@
 <section class="mb-8">
   <div class="mb-4">
     <h1
-      class="font-extrabold text-5xl md:text-6xl tracking-tight pt-4 pb-2 overflow-hidden"
+      class="font-extrabold text-5xl md:text-6xl tracking-tight py-4 overflow-hidden"
     >
       <span
         class="bg-gradient-to-br from-[#fb923c] via-[#f97316] to-[#ea580c] dark:from-primary-main dark:via-primary-main dark:to-primary-main bg-clip-text text-transparent"
       >
-        Captain Awesome
+        DM的博客
       </span>
     </h1>
-    <p class="text-2xl pb-4">Web Developer. OSS Wizard. Blogger.</p>
+    <p class="text-2xl pb-4">2025届学生，前端开发爱好者，目前在学习前端开发，对工具链感兴趣，理想是为程序员的开发效率提高做贡献。</p>
   </div>
   <div>
-    <p class="mb-5">
-      Hello! This is a starter template to build your own blog with 
+    <!-- <p class="mb-5">
+      欢迎来到我的博客
       <a href={"https://github.com/flexdinesh/blogster"} target="_blank">Blogster</a>. 
       Available in four themes  
       <a href={"https://blogster-minimal.netlify.app"} target="_blank">minimal</a>, 
@@ -25,9 +25,9 @@
       <a href={"https://blogster-bubblegum.netlify.app"} target="_blank">bubblegum</a>. 
       This blog is a demo for <strong>sleek</strong> theme.
       Get started with one simple command.
-    </p>
-    <p class="text-center whitespace-nowrap overflow-auto">
+    </p> -->
+    <!-- <p class="text-center whitespace-nowrap overflow-auto">
       <code class="py-1 px-2">npx create-blogster@latest --theme sleek</code>
-    </p>
+    </p> -->
   </div>
 </section>
