--- a/src/layouts/Favicon.astro
+++ b/src/layouts/Favicon.astro
@@ -9,4 +9,4 @@
   This is an example. 
   Use https://realfavicongenerator.net to generate the icons and manifest. 
 -->
-<link href="/favicon.ico" rel="shortcut icon" />
+<link href="/tower_of_pisa.svg" rel="shortcut icon" />
